# HSE-NN-Studying

./: .gitignore  test.txt
1 Year/ASM/: lab1.asm  macro.asm  scnsaver_lab2.asm
1 Year/Coursework/: MusicianBOT.py  config.py
1 Year/Data structures & algorithms/Lab 1/Qsort/: CMakeSettings.json  main.c
1 Year/Data structures & algorithms/Lab 1/Radix sort x16/: CMakeLists.txt
1 Year/Data structures & algorithms/Lab 2/Binary search/: CMakeLists.txt  main.c
1 Year/Data structures & algorithms/Lab 2/Doubling seacrh/: main.c
1 Year/Data structures & algorithms/Lab 2/Linear search/: main.c
1 Year/Data structures & algorithms/Lab 2/Polish reverse notation/: CMakeLists.txt  main.c
1 Year/Data structures & algorithms/Lab 3/BFS/: CMakeLists.txt
1 Year/Data structures & algorithms/Lab 3/Dijkstra alghoritm/: CMakeLists.txt
1 Year/Data structures & algorithms/Lab 3/Horses/: CMakeLists.txt  main.c
1 Year/Data structures & algorithms/Lab 3/Labyrith/: main.c
1 Year/Data structures & algorithms/Lab 4/Coins/: CMakeLists.txt
1_Year/ASM/: make.bat
1_Year/DS&A/Lab_1/BucketSort/: main.c
1_Year/DS&A/Lab_1/InsSort/: CMakeLists.txt
1_Year/DS&A/Lab_1/Qsort/: CMakeLists.txt
1_Year/DS&A/Lab_2/Brackets/: main.c
1_Year/DS&A/Lab_2/Linear_search/: CMakeLists.txt
1_Year/DS&A/Lab_2/PolishReverseNotation/: CMakeLists.txt  main.c
1_Year/DS&A/Lab_3/BFS/: main.c
1_Year/DS&A/Lab_3/Cycle/: CMakeLists.txt
1_Year/DS&A/Lab_3/Dijkstra/: main.c
2 Year/OS/: work_with_files.sh
2_Year/C++Programming/Ex2/include/: task1.h
2_Year/C++Programming/Ex2/src/: main1.cpp  task1.cpp
2_Year/C++Programming/Ex2/test/: test_lab1.cpp
2_Year/C++Programming/Ex3/test/: test_lab1.cpp
2_Year/C++Programming/Ex4/include/: task1.h
2_Year/C++Programming/Ex4/src/: main1.cpp
2_Year/C++Programming/Lab1/: CMakeLists.txt
2_Year/C++Programming/Lab1/include/: task2.h  task3.h  task4.h  task5.h
2_Year/C++Programming/Lab1/src/: main2.cpp  main3.cpp  main4.cpp  main5.cpp  task3.cpp  task4.cpp
2_Year/OS/: RPS.sh  calc.sh  hwshgensh.sh  ugadaika.sh  work_with_files.sh
ASM/: lab1.asm  scnsaver_lab2.asm
OS/: work_with_files.sh
year1/ASM/: macro.asm  parser.asm
year1/DS&A/Lab_1/BucketSort/: CMakeLists.txt
year1/DS&A/Lab_1/InsSort/: main.c
year1/DS&A/Lab_1/MergeSort/: main.c
year1/DS&A/Lab_1/RadixSort_x16/: main.c
year1/DS&A/Lab_2/Brackets/: CMakeLists.txt
year1/DS&A/Lab_2/Doubling_seacrh/: CMakeLists.txt
year1/DS&A/Lab_3/Cycle/: main.c
year1/DS&A/Lab_3/Dijkstra/: main.c
year1/DS&A/Lab_3/Labyrith/: CMakeLists.txt
year1/DS&A/Lab_4/Coins/: main.c
year1/DS&A/Lab_4/Greedy/: main.c
year2/C++Programming/!Lections/texts/: 11-STL-2.md
year2/C++Programming/Ex10 ReversePolishNotation/: CMakeLists.txt  README.md
year2/C++Programming/Ex10 ReversePolishNotation/include/: MyStack.h  Postfix.h
year2/C++Programming/Ex2 Tests/: README.md
year2/C++Programming/Ex3 ctime/: README.md
year2/C++Programming/Ex4 comparators/: README.md
year2/C++Programming/Ex5 template functions/: CMakeLists.txt  README.md
year2/C++Programming/Ex7 Fraction, operator overload/: CMakeLists.txt  README.md
year2/C++Programming/Ex8 operator overload/: CMakeLists.txt  README.md
year2/C++Programming/Ex9 Stack/: CMakeLists.txt  README.md
year2/C++Programming/Ex9 Stack/src/: CMakeLists.txt  main.cpp
year2/C++Programming/Ex9 Stack/test/: AllTests.cpp  CMakeLists.txt  tests.cpp
year2/C++Programming/Lab1/: README.md
year2/C++Programming/Lab2 template functions/: README.md
year2/C++Programming/Lab3 simple classes/: CMakeLists.txt  README.md
year2/C++Programming/Lab4 Automata/: README.md
year2/C++Programming/Lab4 Automata/src/: Automata.cpp  CMakeLists.txt  main.cpp
year2/C++Programming/Lab5 Deanery/: README.md  students.txt
year2/C++Programming/Lab6 Staff/: README.md
year2/C++Programming/Lab6 Staff/src/: CMakeLists.txt  Employee.cpp  Engineer.cpp  Factory.cpp  Manager.cpp  Personal.cpp  main.cpp
year2/C++Programming/Lab7 ocean imitation/: CMakeLists.txt  README.md
year2/C++Programming/Lab7 ocean imitation/src/: CMakeLists.txt  Cell.cpp  Ocean.cpp  Predator.cpp  Prey.cpp  Stone.cpp  main.cpp
year2/DS&A/CFP & VNS/: CMakeLists.txt  README.md  cfp.cpp  problem.h
year2/DS&A/Doubly-linked list/: List.h
year2/DS&A/Prime Tests/: fermat.cpp  miller-rabin.cpp
year2/DS&A/String Matchers/: Knuth-Morris-Pratt.cpp  Robin-Karp.cpp
year2/DS&A/TSP & GA/: CMakeLists.txt  GeneticTSP.h  README.md  data.txt  main.cpp
year2/DS&A/TSP & ILS/: IteratedLS.cpp  README.md
year2/Databases/Lab1 Queries/: README.md  database.sql
year2/Java/Lab2 matrix/: MatrixDouble.java
year2/Java/complex/: Complex.java
year2/Java/matrix/: MatrixComplex.java
year2/Java/symbolFrequencyInFile/: Task.java
year2/OS/: .f.enc  RPS.sh  calc.sh  hwshgensh.sh
year2/coursework_gcode/HeaderFiles/: CEcoGCode1.h  CEcoGCode1Factory.h  CEcoGCodeProgram1.h
year2/coursework_gcode/SharedFiles/: IEcoGCode1.h  IdEcoGCode1.h
year2/coursework_gcode/SourceFiles/: CEcoGCode1.c  CEcoGCode1Factory.c  CEcoGCodeProgram1.c
year3/Modern ML/Image Classification/: Task.ipynb  lab1.html  lab1.ipynb
year3/Modern ML/Object Detection/: Task.ipynb
year3/QA/BBD/: behave_ouput.txt  environment.py
year3/QA/DDT/: test.py
year3/Web/task-manager/: script.babel  style.css
year3/Web/tic-tac-toe/: index.html  main.js  style.css
year3/coursework/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-deps-debug.sh  build-deps-release.sh
year3/coursework/configs/: config.yaml
year3/coursework/include/: async_image_loader.h  bucket.h  ceres_types.h  config_reader.h  drawer.h  feature.h  frame.h  g2o_types.h  map.h  map_point.h  optimizer.h  tracking.h  utils.h
year3/coursework/src/: bucket.cpp  drawer.cpp  feature.cpp  frame.cpp  main.cpp  map.cpp  optimizer.cpp  tracking.cpp  utils.cpp
year4/Parallel Programming/matrix_mul_mpi/: .gitignore  README.md  build_n_run.sh  test.py
year4/Parallel Programming/n_body/: CMakeLists.txt  README.md  generate_input.py  main.c  n_body.c  n_body.h  vis.py
(+154 files in other folders)
